k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flipkart-ingress
  namespace: flipkart
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - flipkartapp.example.com
      secretName: flipkart-tls
  rules:
    - host: flipkartapp.example.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: flipkart-api-svc
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flipkart-web-svc
                port:
                  number: 5001
